chore: Set up eslint and gulp

--- a/package.json
+++ b/package.json
@@ -17,13 +17,6 @@
   },
   "homepage": "https://github.com/DotunAj/mws-restaurant-stage-1#readme",
   "devDependencies": {
-    "grunt": "^1.0.3",
-    "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-nodeunit": "^2.0.0",
-    "grunt-contrib-uglify": "^3.4.0",
-    "grunt-mkdir": "^1.0.0",
-    "grunt-responsive-images": "^1.10.1"
+    "gulp": "^3.9.1"
   }
 }
