--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/DotunAj/mws-restaurant-stage-1#readme",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-prettier": "^2.6.2",
+    "gulp": "^3.9.1",
+    "prettier": "^1.14.2",
+    "prettier-eslint": "^8.8.2"
   }
 }
